--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="Images/Dil.PNG" alt="Dilhara profile picture"> </td>
+      <td> <img src="Dil.PNG" alt="Dilhara profile picture"> </td>
       <td>
         <h1> Dilhara Dissanayake </h1>
         <p> <em>Software Engineer at <strong><a href="https://www.google.com/">Google</a></strong>.</em></p>
