--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <a href="hobbies.html">My hobbies</a>
   </ul>
   <ul>
-    <a href="contact details.html"Contact Details</a>
+    <a href="contact details.html">Contact Details</a>
 
   </ul>
 
